--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -150,7 +150,7 @@ body {
 @media (max-width: 1200px) {
     .cabecalho{
         padding: 5%;
-        justify-content: center;
+        justify-content: space-between;
 
     }
     .conteudo {
